@@ -7,6 +7,13 @@
 
 <news name="nginx news" link="/" lang="en">
 
+<event date="2015-12-09">
+<para>
+<link doc="en/download.xml">nginx-1.9.9</link>
+mainline version has been released.
+</para>
+</event>
+
 <event date="2015-12-08">
 <para>
 <link doc="en/download.xml">nginx-1.9.8</link>
